--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": ">=14.20.1"
   },
   "scripts": {
-    "start": "index.js",
+    "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "keywords": [],
